# ToolboxIS

./: .gitignore  Cargo.toml  LICENSE  README.md
.run/: Run debug.run.xml  Run release.run.xml
src/: main.rs
src/core/: mod.rs
src/core/audio/: mod.rs  music_player.rs
src/core/config/: mod.rs
src/core/meta/: mod.rs  update.rs
src/core/msg/: mod.rs  music_player.rs
src/core/state/: mod.rs  state.rs
src/ui/: mod.rs
